# ai-agent

./: .env.example  .gitignore  evolution_config.yaml  kb_config.yaml  llm.yaml  main.py  pyproject.toml  requirements.txt  server.py  start.bat
api/: server.py
context/: manager.py
core/: __init__.py  container.py  interfaces.py  models.py
docs/demo/: company_overview.md  faq.md  product_manual.md
eval/: framework.py
evolution/: __init__.py  bus.py  config.py  models.py  scheduler.py  store.py  store_markdown.py
evolution/actors/: __init__.py  base.py  kb_injector.py  param_tuner.py  prompt_updater.py  template_builder.py
evolution/analyzers/: __init__.py  base.py  bi_profiler.py  chunk_scorer.py  qa_extractor.py
evolution/signals/: __init__.py  base.py  bi.py  rag.py
frontend/: index.html
hitl/: checkpoint.py
llm/: call_logger.py  engines.py  router.py
mcp/: hub.py
memory/: consolidation.py  factory.py  protocols.py  stores.py
memory/ltm/: mem0_ltm.py
multiagent/: bus.py  orchestrator.py
multimodal/: processor.py
orchestrator/: dag.py  engines.py
prompt_mgr/: manager.py
queue/: __init__.py  scheduler.py
rag/: config.py  kb_manager.py  knowledge_base.py  milvus_store.py  persistent_kb.py  qdrant_store.py  store.py  vector_store_base.py
rag/chunkers/: __init__.py  base.py  contextual.py  factory.py  fixed.py  semantic.py  sentence.py  structural.py
rag/embedders/: __init__.py  base.py  bge_local_embedder.py  factory.py  openai_embedder.py  qwen3_local_embedder.py  qwen_embedder.py
rag/files/: __init__.py  manager.py  models.py  store.py
rag/graph/: __init__.py  builder.py  community.py  extractor.py  models.py  resolver.py  retriever.py  store.py
rag/keyword_stores/: __init__.py  base.py  elasticsearch_store.py  factory.py  memory_store.py  opensearch_store.py
rag/parsers/: __init__.py  base.py  docling_parser.py  factory.py  markitdown_parser.py  unstructured_parser.py
rag/permissions/: __init__.py  manager.py  models.py  router.py  security_manager.py  security_models.py  security_store.py
rag/pipeline/: __init__.py  advanced_query.py  ingestion.py  query.py
rag/rerankers/: __init__.py  bge_reranker.py  cohere_reranker.py
scripts/: load_demo_docs.py  setup_d_drive.bat
security/: middleware.py
skills/: builtins.py  loader.py  registry.py  weather.py
skills/hub/: __init__.py
skills/hub/agent_bi/: __init__.py  skill.yaml
skills/hub/currency_exchange/: __init__.py  skill.yaml
skills/hub/datetime/: __init__.py  skill.yaml
skills/hub/knowledge_graph/: __init__.py  skill.yaml
skills/hub/marketing_advisor/: __init__.py  skill.yaml
skills/hub/stock_price/: __init__.py  skill.yaml
skills/hub/text_translate/: __init__.py  skill.yaml
skills/hub/unit_converter/: __init__.py  skill.yaml
tenant/: manager.py
tests/: conftest.py  test_agent.py  test_agent_bi_skill.py  test_builtins.py  test_docling_parser.py  test_extensions.py  test_kb_api.py  test_kb_qa.py  test_kb_unit.py  test_memory.py  test_ollama_qwen3.py  test_ollama_weather.py  test_qwen3_local_embed.py  test_router.py  test_vector_store.py  test_weather_skill.py
utils/: config.py  cost.py  llm_config.py  observability.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/graph/: page.tsx
web/src/app/knowledge/: layout.tsx  page.tsx
web/src/app/workspaces/: page.tsx
web/src/components/cards/: BiReportCard.tsx  DagPlanCard.tsx  MarketingPlanCard.tsx  MultiAgentCard.tsx  WeatherCard.tsx
web/src/components/chat/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  ToolCallCard.tsx
web/src/components/graph/: EntityDetailPanel.tsx  ForceGraphPanel.tsx  ReasoningTraceCard.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/contexts/: AppContext.tsx
web/src/hooks/: useChat.ts
web/src/lib/: api.ts  parseStructuredData.ts  utils.ts
web/src/types/: index.ts
workspace/: __init__.py  manager.py  memory.py  models.py  store.py
