[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-agent"
version = "1.0.0"
description = "Modular AI Agent with Skill, MCP, and Memory support"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.20.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "asyncio-throttle>=1.0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
vector = ["qdrant-client>=1.8.0", "sentence-transformers>=2.6.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
