[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "1.0.0"
description = "Modular AI Agent with Skill, MCP, Memory and Knowledge Base support"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.36.0",
    "python-multipart>=0.0.7",
    "jinja2>=3.1.0",
    # 数据验证
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    # HTTP 客户端
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    # LLM SDK
    "openai>=1.20.0",
    "anthropic>=0.25.0",
    # 日志 / 配置
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    # 重试 / 限流 / Token
    "tenacity>=8.2.0",
    "asyncio-throttle>=1.0.2",
    "tiktoken>=0.6.0",
    # 调度
    "APScheduler>=3.10.0",
    # 数值计算
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "pillow>=10.0.0",
    # 向量存储（默认 Milvus Lite，无需服务）
    "pymilvus>=2.4.0",
    # 文档解析
    "docling>=2.5.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    # 关键词检索
    "elasticsearch[async]>=8.13.0",
    # 记忆后端
    "redis>=5.0.0",
    # 报表
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
# 本地 Embedding 模型（qwen3_local / bge_local）
local-embed = [
    "transformers>=4.50.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.6.0",
    "FlagEmbedding>=1.2.0",
]

# 文档分块（strategy: semantic）
chunking = ["chonkie[sentence]>=0.4"]

# 文档解析扩展
parsing-markitdown   = ["markitdown[all]>=0.1.0"]
parsing-unstructured = ["unstructured[all-docs]>=0.12.0"]

# 向量存储备选
vector-qdrant = ["qdrant-client>=1.8.0"]
vector-chroma = ["chromadb>=0.4.0"]

# 关键词检索备选
keyword-opensearch = ["opensearch-py>=2.4.0"]

# 知识图谱存储（backend: neo4j）
graph-neo4j = ["neo4j>=5.19.0"]

# 记忆后端扩展
memory-mem0 = ["mem0ai>=0.0.20"]
memory-zep  = ["zep-python>=2.0.0"]

# 重排序
rerank-cohere = ["cohere>=5.0.0"]

# 开发 / 测试
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

# 全量安装（开发机推荐）
all = [
    "transformers>=4.50.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.6.0",
    "FlagEmbedding>=1.2.0",
    "chonkie[sentence]>=0.4",
    "markitdown[all]>=0.1.0",
    "qdrant-client>=1.8.0",
    "opensearch-py>=2.4.0",
    "neo4j>=5.19.0",
    "cohere>=5.0.0",
    "mem0ai>=0.0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: 需要真实模型文件 / 网络的集成测试（pytest -m integration）",
]
